vpc/ec2.tf
# resource "aws_instance" "web" {
#   ami           = "ami-0cbe318e714fc9a82"
#   instance_type = "t2.micro"

#   tags = {
#     Name = "Terraform-session-instance"
#   }
# }
